# RGBLED_Position

./: .gitignore  CMakeLists.txt  README.md  记录.md
config/: camPosi_cfg.json
include/: Cluster.h  GeomeOperation.h  IPClocation.h  RobotPosition.h  ScanRelocate.h  System.h  TrackBlock.h
res/: IPCxml.xml  anccameraMTX.json  redmicameraMTX.json  redmicameraMTX.yml
src/: Cluster.cpp  GeomeOperation.cpp  IPClocation.cpp  RobotPosition.cpp  ScanRelocate.cpp  System.cpp  TrackBlock.cpp
test/: ARtag_testdata.cpp  ca.py  cameraCalibrate.py  datasave.cpp  position.cpp  savepic.cpp  setworld.cpp  testRGBTrack.cpp  testSys.cpp  test_ledreg.py  testgeome.cpp
